Right Search: Fix message text overflow (#1689)

--- a/src/components/left/search/ChatMessage.scss
+++ b/src/components/left/search/ChatMessage.scss
@@ -30,6 +30,7 @@
         background: #CAE3F7;
         border-radius: 0.25rem;
         padding: 0 0.125rem;
+        display: inline-block;
 
         .theme-dark & {
           --color-text: #000;
