--- a/src/components/ui/ListItem.scss
+++ b/src/components/ui/ListItem.scss
@@ -285,6 +285,7 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       text-align: left;
+      display: block;
     }
 
     .LastMessageMeta {
@@ -301,6 +302,7 @@
         background: #CAE3F7;
         border-radius: 0.25rem;
         padding: 0 0.125rem;
+        display: inline-block;
 
         .theme-dark & {
           --color-text: #000;
